Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-1-service
spec:
  selector:
    app: homework-1-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
