Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
    rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/artem($|/)(.*)
            pathType: Prefix
            backend:
              service:
                name: homework-1-service
                port:
                  number: 8000
